appId: com.devsilogix.vard
---
- extendedWaitUntil:
    visible: "ACESSAR SUA CONTA|Continue|Performance monitor"
    timeout: 120000
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Performance monitor"
    commands:
      - back
- extendedWaitUntil:
    visible: "ACESSAR SUA CONTA"
    timeout: 60000
